--- a/Agent/style/default.css
+++ b/Agent/style/default.css
@@ -1,4 +1,4 @@
-@charset "utf-8";
+﻿@charset "utf-8";
 /* CSS Document */
 *{margin:0px; padding:0px; border:0px;}
 
@@ -103,5 +103,52 @@ a:hover{color:#000; text-decoration:none;}
 #footer>div a:hover{color:#ccc; text-decoration:underline;}
 #footer>div .right{width:20%; float:right; text-align:right;}
 
+
+
+
+ .formstyle{
+	width:280px;
+	height:31px;
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+	border-radius: 3px;
+	background: #FBFBFB;
+	box-shadow:inset 0 0 5px #F0F0F0;
+	margin: 0 0 0 8px;
+	border: 1px solid #a8a8a8;
+	color:#404040;
+} 
+
+  .buttonwe {
+    background-color: transparent;
+    border: medium none;
+    cursor: pointer;
+    font-family: Arial;
+    margin: 0;
+    overflow: visible;
+    padding: 0;
+}
+.buttonwe span {
+    background: url("images/btn_right.gif") no-repeat scroll right top transparent;
+    display: block;
+    float: left;
+    height: 33px;
+    margin: 0;
+    padding: 0 4px 0 0;
+}
+.buttonwe span span {
+    background: url("images/btn_left.gif") no-repeat scroll left top transparent;
+    color: #FFFFFF;
+    display: block;
+    font-family: 'Conv_calibri',Sans-Serif;
+    font-size: 16px;
+    font-weight: normal;
+    height: 33px;
+    line-height: 22px;
+    padding: 4px 8px;
+    text-decoration: none;
+    text-transform: uppercase;
+    width: 265px;
+} 
 
 
