--- a/Agent/style/default.css
+++ b/Agent/style/default.css
@@ -6,8 +6,8 @@
 	border: 0px;
 }
 body {
-	font-family: Verdana, Geneva, sans-serif;
-	font-size: 11px;
+	font-family: Verdana, Geneva, sans-serif!important;
+	font-size: 11px!important;
 	line-height: 18px;
 	color: #333;
 }
@@ -110,11 +110,23 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fefefe', end
 	border-right: 1px solid #ccc;
 	margin-right: 10px;
 }
-#header .right {
-	float: right;
-	text-align: right;
-	width:340px;
-	margin-top: 1%;
+#header .right { /*updates by arti@11sep */
+    float: right;
+    margin-top: 0;
+    position: relative;
+    text-align: right;
+    top: 10px;
+    width: 400px;
+}
+
+#header .right .list {
+    background-image: url("../images/list-top.png");
+    background-position: 84px 11px;
+    background-repeat: no-repeat;
+    float: left;
+    margin-left: 45px;
+    overflow: hidden;
+    width: 95px;
 }
 #header .right span{
 	width:70px;
@@ -127,7 +139,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fefefe', end
 }
 .right span select{
 	font-family:"Trebuchet MS", Arial, Helvetica, sans-serif;
-	width:87px;
+	width:93px;
 	background-color: transparent;
 	border: 0;
 	font-size: 13px;
@@ -138,6 +150,19 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fefefe', end
 	-webkit-appearance: none;
 	outline:none;
 }
+.right .list select {
+    background-color: rgba(0, 0, 0, 0);
+    border: 0 none;
+    color: #333333;
+    font-family: "Trebuchet MS",Arial,Helvetica,sans-serif;
+    font-size: 13px;
+    font-weight: bold;
+    outline: medium none;
+    padding-left: 3px;
+    padding-top: 5px;
+    width: 118px;
+}
+
 .green-tab p{
 	font-family:"Trebuchet MS", Arial, Helvetica, sans-serif;
 	font-size:13px;
@@ -168,6 +193,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fefefe', end
 	color:#fff;
 	background: #ccc;
 	-webkit-border-radius: 5px;-moz-border-radius: 5px;border-radius: 5px;
+	text-decoration: none;
 }
 /*------------ Home page Main Section ---------------------*/
 #mainbg {
@@ -250,16 +276,15 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fefefe', end
 	cursor: pointer;
 	float: right;
 }
-.ddmenu-inner {
-	width: 138px;
-	background-image: url(../images/ddmenu-nner.png);
+.ddmenu-inner { /*updates by arti@11sep */
+    background-image: url("../images/ddmenu-nner.png");
+    background-repeat: no-repeat;
+    width: 110px;
 	height: 34px;
-	background-repeat: no-repeat;
-	overflow: hidden;
 }
 .ddmenu-inner select {
 	font-family:"Trebuchet MS", Arial, Helvetica, sans-serif;
-	width: 110px;
+	width: 135px;
 	background-color: transparent;
 	border: 0;
 	font-size: 12px;
@@ -461,4 +486,11 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fefefe', end
 	text-align:right;
     font-size: 12px;
     font-weight: bold;
+}
+.text_size {width: 94%; padding: 2%; line-height: 40px; float: left; min-height:170px; font-size: 16px; border: 1px solid #e5e5e5; border-radius: 7px; -moz-border-radius: 7px; -webkit-border-radius: 7px; -khtml-border-radius: 7px; background: #fff;
+}
+button
+{
+	outline:none!important;
+	border:none!important;
 }
