--- a/Agent/style/tabcontent.css
+++ b/Agent/style/tabcontent.css
@@ -1,7 +1,7 @@
 ﻿
 ul.tabs{
     padding-top: 6px;
-	margin-bottom:2px;
+	margin-bottom:1px; /*updates by arti@11sep */
     font-size: 0;
     list-style-type: none;
     text-align: left; /*set to left, center, or right to align the tabs as desired*/
