--- a/Agent/style/default.css
+++ b/Agent/style/default.css
@@ -466,7 +466,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fefefe', end
 	line-height: 25px;
 	font-family:Arial, Helvetica, sans-serif;
 	font-weight: normal;
-	text-transform:capitalize;
+	text-transform:lowercase;
 
 }
 .listagens-text-left{
