--- a/Agent/style/default.css
+++ b/Agent/style/default.css
@@ -462,10 +462,10 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fefefe', end
 	zoom: 1;
 }
 .list_heading{
-	font-size: 18px;
+	font-size: 15px;
 	line-height: 25px;
-	font-family:Arial, Helvetica, sans-serif;
-	font-weight: normal;
+	font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;
+	font-weight: 800;
 	text-transform:lowercase;
 
 }
